# my-darktable

./: CMakeLists.txt  DefineOptions.cmake
.github/workflows/: ci.yml  clang-format.yml  codeql.yml  nightly-quality.yml
cmake/modules/: FindGTK4.cmake  FindONNXRuntime.cmake
data/lua/examples/: simple_mode.lua
data/themes/: aegis_tokens.css  darktable.css
docs/: prompt_documentacao.md  prompt_ui_v2.md
install/share/applications/: org.darktable.darktable.desktop
install/share/darktable/: darktablerc
install/share/darktable/lua/: mcp_bridge.lua  (+1 more)
install/share/metainfo/: org.darktable.darktable.appdata.xml
src/: CMakeLists.txt
src/bauhaus/: bauhaus.c
src/common/: dt_ai_core.c  dt_ai_core.h  ras2vect.c
src/develop/: blend_gui.c  imageop.c
src/dtgtk/: range.c
src/gui/: accelerators.c  color_picker_proxy.c  gtk.c  gtk.h  guides.c  hist_dialog.c  import_metadata.c  preferences.c  presets.c  presets.h  splash.c  styles_dialog.c  workspace.c
src/iop/: agx.c  lens.cc  levels.c
src/libs/: backgroundjobs.c  camera.c  collect.c  export.c  export_metadata.c  filtering.c  geotagging.c  lib.c  metadata.c  modulegroups.c  navigation.c  print_settings.c  recentcollect.c  snapshots.c  tagging.c
src/libs/tools/: colorlabels.c  global_toolbox.c  image_infos.c  viewswitcher.c
src/lua/: ai.c  ai.h  init.c
src/tests/fuzz/: README.md  fuzz_imageio.c
src/tests/unittests/: CMakeLists.txt
src/tests/unittests/common/: CMakeLists.txt  test_ai_core.c  test_math.c
src/views/: darkroom.c
tools/: mcp_server.py  setup_onnx.sh  test_dbus_lua.py  test_socket.lua
(+24 files in other folders)
